B-F Sandbox Full-Backup/src/objects/Reconciliation_Accounts__c.object
<CustomObject>
    <description>This object is used to store information pertaining to accounts that are reconciled quarterly.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Account Number from SAP</description>
        <inlineHelpText>Account Number from SAP</inlineHelpText>
        <label>Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reconciliation_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reconciliation_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Listing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Company_Code__c</columns>
        <columns>Description__c</columns>
        <columns>Party_Responsible__c</columns>
        <columns>Reviewer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>